--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,7 @@ dependencies {
 
     implementation 'com.google.android.libraries.places:places:2.6.0'
 
-
+   // def work_version = "2.7.1"
     // ( Java only )
 
     implementation "androidx.work:work-runtime:2.7.1"
